# rect_detect

./: .env  .gitignore  README.md  app.ipynb  docker-compose.yml  pyproject.toml  ui.py
.github/workflows/: gcp-deploy-api.yml  gcp-deploy-ui.yml
api/: Dockerfile  main.py  test_main.py
proto/: prototype.py
ui/: Dockerfile  main.py  requirements.txt  test_main.py
