[tool.poetry]
name = "rect_detect"
version = "0.1.0"
description = ""
authors = ["Patrick Nadeau <patrick.a.nadeau@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
opencv-python = "^4.9.0.80"
ipykernel = "^6.29.0"
matplotlib = "^3.8.2"
scikit-image = "^0.22.0"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
python-multipart = "^0.0.6"
streamlit = "^1.30.0"
watchdog = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
